{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 171,
  "lineage": "1561130a-5549-006b-55a1-caed032a000d",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381315101586:targetgroup/shortifyaf-api-tg/8222c5edeaa7e64a",
            "arn_suffix": "targetgroup/shortifyaf-api-tg/8222c5edeaa7e64a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381315101586:targetgroup/shortifyaf-api-tg/8222c5edeaa7e64a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "shortifyaf-api-tg",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "shortifyaf-api-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shortifyaf-api-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07479c0e0b1e4cbf6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381315101586:targetgroup/shortifyaf-tg/ca826957cd0ac58c",
            "arn_suffix": "targetgroup/shortifyaf-tg/ca826957cd0ac58c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381315101586:targetgroup/shortifyaf-tg/ca826957cd0ac58c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "shortifyaf-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "shortifyaf-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shortifyaf-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07479c0e0b1e4cbf6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:381315101586:targetgroup/shortifyaf-api-tg/8222c5edeaa7e64a-2025112408021986690000000a",
            "port": 3001,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381315101586:targetgroup/shortifyaf-api-tg/8222c5edeaa7e64a",
            "target_id": "i-055d3f674bdfeb6f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb_target_group.api",
            "module.compute.aws_instance.app",
            "module.compute.aws_security_group.app",
            "module.compute.aws_security_group.bastion",
            "module.compute.data.aws_ami.amazon_linux_2",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:381315101586:targetgroup/shortifyaf-tg/ca826957cd0ac58c-20251124080219657400000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381315101586:targetgroup/shortifyaf-tg/ca826957cd0ac58c",
            "target_id": "i-055d3f674bdfeb6f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb_target_group.app",
            "module.compute.aws_instance.app",
            "module.compute.aws_security_group.app",
            "module.compute.aws_security_group.bastion",
            "module.compute.data.aws_ami.amazon_linux_2",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381315101586:security-group/sg-0f2193909044bdceb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2193909044bdceb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "shortifyaf-alb-20251124080149832500000002",
            "name_prefix": "shortifyaf-alb-",
            "owner_id": "381315101586",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "shortifyaf-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shortifyaf-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07479c0e0b1e4cbf6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_to_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3001,
            "id": "sgrule-2109525379",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c365266f9005b547",
            "security_group_rule_id": "sgr-0e56ff29cc49b9531",
            "self": false,
            "source_security_group_id": "sg-0f2193909044bdceb",
            "timeouts": null,
            "to_port": 3001,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.compute.aws_security_group.app",
            "module.compute.aws_security_group.bastion",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0156001f0548e90b1",
            "arn": "arn:aws:ec2:us-east-1:381315101586:instance/i-055d3f674bdfeb6f1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-055d3f674bdfeb6f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "shortifyaf-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01716abee0772bf7f",
            "private_dns": "ip-10-0-3-241.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-030791dc7e30da494",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dca5532916d0d98a",
            "tags": {
              "Environment": "dev",
              "Name": "shortifyaf-app-server"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shortifyaf-app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c365266f9005b547"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_security_group.app",
            "module.compute.aws_security_group.bastion",
            "module.compute.data.aws_ami.amazon_linux_2",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0156001f0548e90b1",
            "arn": "arn:aws:ec2:us-east-1:381315101586:instance/i-042fcddfa82448550",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-042fcddfa82448550",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "shortifyaf-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0407108c0d8f98169",
            "private_dns": "ip-10-0-1-73.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.73",
            "public_dns": "ec2-3-234-205-127.compute-1.amazonaws.com",
            "public_ip": "3.234.205.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-020fbfa2b425d4cf2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0541ea5204e117875",
            "tags": {
              "Environment": "dev",
              "Name": "shortifyaf-bastion"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shortifyaf-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0311a9725462c859e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_security_group.bastion",
            "module.compute.data.aws_ami.amazon_linux_2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381315101586:security-group/sg-0c365266f9005b547",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c365266f9005b547",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "API from ALB",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0311a9725462c859e"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "shortifyaf-app-20251124080156606200000006",
            "name_prefix": "shortifyaf-app-",
            "owner_id": "381315101586",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "shortifyaf-app-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shortifyaf-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07479c0e0b1e4cbf6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_security_group.bastion",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381315101586:security-group/sg-0311a9725462c859e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0311a9725462c859e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from allowed IPs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "shortifyaf-bastion-20251124080150810400000003",
            "name_prefix": "shortifyaf-bastion-",
            "owner_id": "381315101586",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "shortifyaf-bastion-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shortifyaf-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07479c0e0b1e4cbf6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d59de280acb7b6f",
            "arn": "arn:aws:ec2:us-east-1:381315101586:elastic-ip/eipalloc-04d59de280acb7b6f",
            "domain": "vpc",
            "id": "eipalloc-04d59de280acb7b6f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-230-231-174.compute-1.amazonaws.com",
            "public_ip": "3.230.231.174",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "shortifyaf-nat-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shortifyaf-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c80d9fce62f38dda",
            "arn": "arn:aws:ec2:us-east-1:381315101586:elastic-ip/eipalloc-0c80d9fce62f38dda",
            "domain": "vpc",
            "id": "eipalloc-0c80d9fce62f38dda",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-82-71-232.compute-1.amazonaws.com",
            "public_ip": "3.82.71.232",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "shortifyaf-nat-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shortifyaf-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381315101586:internet-gateway/igw-036175d2161ca0799",
            "id": "igw-036175d2161ca0799",
            "owner_id": "381315101586",
            "tags": {
              "Environment": "dev",
              "Name": "shortifyaf-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shortifyaf-igw"
            },
            "vpc_id": "vpc-07479c0e0b1e4cbf6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d59de280acb7b6f",
            "association_id": "eipassoc-0de0e5de164bff45b",
            "connectivity_type": "public",
            "id": "nat-0e25e36c5ca8f496d",
            "network_interface_id": "eni-04061a953ab556bcc",
            "private_ip": "10.0.1.123",
            "public_ip": "3.230.231.174",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0541ea5204e117875",
            "tags": {
              "Environment": "dev",
              "Name": "shortifyaf-nat-gw-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shortifyaf-nat-gw-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c80d9fce62f38dda",
            "association_id": "eipassoc-03cdb59e171f256a6",
            "connectivity_type": "public",
            "id": "nat-05a7335623f4ee7e6",
            "network_interface_id": "eni-03c57d1bd0b619c67",
            "private_ip": "10.0.2.221",
            "public_ip": "3.82.71.232",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-034c37c5241883d13",
            "tags": {
              "Environment": "dev",
              "Name": "shortifyaf-nat-gw-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shortifyaf-nat-gw-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381315101586:route-table/rtb-0cadd02ca9022229a",
            "id": "rtb-0cadd02ca9022229a",
            "owner_id": "381315101586",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e25e36c5ca8f496d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "shortifyaf-private-rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shortifyaf-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07479c0e0b1e4cbf6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381315101586:route-table/rtb-0cefba72b7971e428",
            "id": "rtb-0cefba72b7971e428",
            "owner_id": "381315101586",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05a7335623f4ee7e6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "shortifyaf-private-rt-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shortifyaf-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-07479c0e0b1e4cbf6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381315101586:route-table/rtb-0333e3b0569d84eb6",
            "id": "rtb-0333e3b0569d84eb6",
            "owner_id": "381315101586",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-036175d2161ca0799",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "shortifyaf-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shortifyaf-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07479c0e0b1e4cbf6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca34cacd02adf1d2",
            "route_table_id": "rtb-0cadd02ca9022229a",
            "subnet_id": "subnet-0dca5532916d0d98a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04506c6ecd4395cbe",
            "route_table_id": "rtb-0cefba72b7971e428",
            "subnet_id": "subnet-0f9fae8939d59d2ed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2299cf6332d853d",
            "route_table_id": "rtb-0333e3b0569d84eb6",
            "subnet_id": "subnet-0541ea5204e117875"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b309da44c013370",
            "route_table_id": "rtb-0333e3b0569d84eb6",
            "subnet_id": "subnet-034c37c5241883d13"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381315101586:subnet/subnet-0dca5532916d0d98a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dca5532916d0d98a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381315101586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "shortifyaf-private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shortifyaf-private-subnet-1"
            },
            "vpc_id": "vpc-07479c0e0b1e4cbf6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381315101586:subnet/subnet-0f9fae8939d59d2ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9fae8939d59d2ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381315101586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "shortifyaf-private-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shortifyaf-private-subnet-2"
            },
            "vpc_id": "vpc-07479c0e0b1e4cbf6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381315101586:subnet/subnet-0541ea5204e117875",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0541ea5204e117875",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381315101586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "shortifyaf-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shortifyaf-public-subnet-1"
            },
            "vpc_id": "vpc-07479c0e0b1e4cbf6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381315101586:subnet/subnet-034c37c5241883d13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034c37c5241883d13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381315101586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "shortifyaf-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shortifyaf-public-subnet-2"
            },
            "vpc_id": "vpc-07479c0e0b1e4cbf6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381315101586:vpc/vpc-07479c0e0b1e4cbf6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e06a3f64fd2b6ca5",
            "default_route_table_id": "rtb-068ab37f51191e0ae",
            "default_security_group_id": "sg-0f9d06c3c5430f760",
            "dhcp_options_id": "dopt-0cfd6a101f5bf10e7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07479c0e0b1e4cbf6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-068ab37f51191e0ae",
            "owner_id": "381315101586",
            "tags": {
              "Environment": "dev",
              "Name": "shortifyaf-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "shortifyaf-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}